# 100_days_python

./: .gitignore  api_test.py  pyproject.toml
100_days_python/Day_15_Coffee_Machine/: coffee_machine.py
advanced/flask/authenticated_blog/: forms.py  main.py
advanced/flask/authentication/: main.py
advanced/flask/build_restful_api/: main.py
advanced/flask/capstone_blog/: main.py
advanced/flask/coffee_wifi/: cafe-data.csv  main.py
advanced/flask/flask_form_secret/: main.py
advanced/flask/flask_wtforms/: main.py
advanced/flask/html_forms/: main.py
advanced/flask/sqlite_database/: books-collection.db  main.py
advanced/flask/top_10_movie/: main.py
advanced/flask/upgraded_blog/: main.py
advanced/flask/virtual_library/: main.py
plus_intermediate/api/exerciser_tracker/: main.py
plus_intermediate/api/flight_club/: data_manager.py  flight_data.py  flight_search.py  main.py  notification_manager.py  test_users.py
plus_intermediate/api/flight_deals/: data_manager.py  flight_data.py  flight_search.py  main.py  notification_manager.py  test.py
plus_intermediate/api/habit_tracker/: main.py
plus_intermediate/api/iss_locations/: main.py
plus_intermediate/api/kanye_quote/: main.py
plus_intermediate/api/rain_alert/: main.py
plus_intermediate/api/stock_news/: README.md  answer.py  first_try.py  main.py
plus_intermediate/bootstrap/bootstrap_components/: index.html
plus_intermediate/bootstrap/intro_exercise/: index.html
plus_intermediate/bootstrap/tindog/: index.html
plus_intermediate/email_smtp/bday_wisher/: answer.py  birthdays.csv  main.py
(+99 files in other folders)
